--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta charset="UTF-8">
   <title>Train Scheduler</title>
 
+  <!-- Refresh Page every 60 seconds -->
+  <meta http-equiv="refresh" content="60">  
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -17,6 +19,8 @@
 
   <!-- Moment.js Reference -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
   <style>
     #train-table th,
@@ -37,6 +41,7 @@
       <h1 class="text-center">Any Time is Train Time</h1>
       <h3 class="text-center">Choo Choo. chee Chee.</h3>
     </div>
+    <p class="text-right" id = "time-display" placeholder="Time goes Here"></p>
 
     <div class="row">
       <div class="col-md-12">
@@ -48,9 +53,9 @@
                 <tr>
                   <th scope="col">Train Name</th>
                   <th scope="col">Destination</th>
-                  <th scope="col">Frequency (min)</th>
-                  <th scope="col">Next Arrival</th>
-                  <th scope="col">Minutes Away</th>
+                  <th scope="col">Frequency (mins)</th>
+                  <th scope="col">Arrival Time</th>
+                  <th scope="col">Train Arrives in:</th>
                 </tr>
               </thead>
               <tbody>
@@ -77,8 +82,8 @@
                 <input class="form-control" id="train-destination-input" placeholder="Salt Lake City" type="text">
               </div>
               <div class="form-group">
-                    <label for="start-input">First Train Time (HH:mm)</label>
-                    <input class="form-control" id="train-start-input" placeholder="12:00 hrs" type="text">
+                    <label for="start-input">First Train Start Time (hh:mm - Military Time)</label>
+                    <input class="form-control" id="train-start-input" placeholder="19:00" type="text">
                   </div>
               <div class="form-group">
                     <label for="frequency-input">Frequency (minutes)</label>
