Added Form To Submit new Train Schedule

--- a/index.html
+++ b/index.html
@@ -67,37 +67,66 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-12">
-        <div class="card mb-4">
-          <div class="card-header">Add Train</div>
-          <div class="card-body">
-            <form>
-              <div class="form-group">
-                <label for="name-input">Train Name</label>
-                <input class="form-control" id="train-name-input" placeholder="Silver Bullet" type="text">
-              </div>
-              <div class="form-group">
-                <label for="role-input">Destination</label>
-                <input class="form-control" id="train-destination-input" placeholder="Salt Lake City" type="text">
-              </div>
-              <div class="form-group">
-                    <label for="start-input">First Train Start Time (hh:mm - Military Time)</label>
-                    <input class="form-control" id="train-start-input" placeholder="19:00" type="text">
-                  </div>
-              <div class="form-group">
-                    <label for="frequency-input">Frequency (minutes)</label>
-                    <input class="form-control" id="train-frequency-input" placeholder="25" type="text">
-                  </div>
-              <button class="btn btn-primary" id="add-train-button">Submit</button>
-            </form>
-
-          </div>
-        </div>
+  <!-- modal Form -->  
+  <div id="id01" class="modal">
+    
+    <form class="modal-content animate" action="/action_page.php">
+      <div class="imgcontainer">
+        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+        <img src="assets/images/Train.jpg" alt="Avatar" class="avatar">
       </div>
-    </div>
+  
 
+      <div class="container">
+   
+        <div class="form-group">
+          <label for="name-input">Train Name</label>
+          <input class="form-control" id="train-name-input" placeholder="Silver Bullet" type="text">
+        </div>
+
+        <div class="form-group">
+          <label for="role-input">Destination</label>
+          <input class="form-control" id="train-destination-input" placeholder="Salt Lake City" type="text">
+        </div>
+
+        <div class="form-group">
+              <label for="start-input">First Train Start Time (hh:mm - Military Time)</label>
+              <input class="form-control" id="train-start-input" placeholder="19:00" type="text">
+        </div>
+
+        <div class="form-group">
+              <label for="frequency-input">Frequency (minutes)</label>
+              <input class="form-control" id="train-frequency-input" placeholder="25" type="text">
+        </div>
+
+        <button class="btn btn-primary" id="add-train-button">Submit</button>
+          
+      </div>
+  
+      <div class="container" style="background-color:#f1f1f1">
+        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+      </div>
+
+    </form>
   </div>
+  
+  <script>
+  // Get the modal
+  var modal = document.getElementById('id01');
+  
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function(event) {
+      if (event.target == modal) {
+          modal.style.display = "none";
+      }
+  }
+  </script>
+  
+  <footer>
+    <div class = "footerDiv">
+      <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Add New Train Scheduele</button>
+    </div> 
+  </footer>
 
   <!-- JavaScript -->
   <script src="assets/javascript/train.js"></script>
