--- a/index.html
+++ b/index.html
@@ -115,16 +115,18 @@
   var modal = document.getElementById('id01');
   
   // When the user clicks anywhere outside of the modal, close it
-  window.onclick = function(event) {
-      if (event.target == modal) {
-          modal.style.display = "none";
-      }
+  window.onclick = function(event) 
+  {
+    if (event.target == modal) 
+    {
+      modal.style.display = "none";
+    }
   }
   </script>
   
   <footer>
     <div class = "footerDiv">
-      <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Add New Train Scheduele</button>
+      <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Add New Train Schedule</button>
     </div> 
   </footer>
 
